[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/SettingsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/graphics/phone large content window.png" type="Texture" id=2]
[ext_resource path="res://textures/buttons/play button.png" type="Texture" id=3]
[ext_resource path="res://textures/buttons/play button hover.png" type="Texture" id=4]
[ext_resource path="res://textures/buttons/play button press.png" type="Texture" id=5]
[ext_resource path="res://textures/icons/pixel city.JPG" type="Texture" id=6]
[ext_resource path="res://textures/graphics/name card.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Scripts/MainScene.gd" type="Script" id=8]
[ext_resource path="res://textures/graphics/phone small content sign.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/path = NodePath("GameLogoPlaceholder:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 336, 672 ), Vector2( 336, 192 ), Vector2( 336, 232 ), Vector2( 336, 224 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 632 ), Vector2( 256, 632 ), Vector2( 256, 272 ) ]
}

[node name="MainScene" type="Node2D"]
script = ExtResource( 8 )

[node name="BG" type="TextureRect" parent="."]
margin_left = -96.0
margin_top = -456.0
margin_right = 1216.0
margin_bottom = 760.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ButtonPanel" type="TextureRect" parent="."]
margin_left = 256.0
margin_top = 272.0
margin_right = 776.0
margin_bottom = 576.0
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="ButtonPanel"]
margin_left = 144.0
margin_top = 88.0
margin_right = 380.0
margin_bottom = 206.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsText" type="RichTextLabel" parent="ButtonPanel"]
margin_left = 192.0
margin_top = 208.0
margin_right = 336.0
margin_bottom = 224.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Press tab for settings."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/intro = SubResource( 1 )

[node name="GameLogoPlaceholder" type="TextureRect" parent="."]
margin_left = 336.0
margin_top = 224.0
margin_right = 704.0
margin_bottom = 344.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 8 )

[node name="AlertWindow" type="TextureRect" parent="."]
visible = false
margin_left = 16.0
margin_top = -8.0
margin_right = 433.0
margin_bottom = 110.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertText" type="RichTextLabel" parent="AlertWindow"]
margin_left = 56.0
margin_top = 24.0
margin_right = 352.0
margin_bottom = 88.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="ButtonPanel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
